--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@
         bottom: 0;
     }
 
+    35% {
+        bottom: 180px;
+    }
+
     40% {
         bottom: 180px;
     }
@@ -59,6 +63,10 @@
         bottom: 180px; 
     }
 
+    55% {
+        bottom: 180px;
+    }
+    
     60% {
         bottom: 180px;
     }
